--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-items.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-items.phtml
@@ -15,7 +15,7 @@ use Satoshi\Theme\Block\Template;
 $hyvaicons = $viewModels->require(SvgIcons::class);
 
 $isCartPage = $block->getData('isCartPage');
-$mixBackground = false;
+$mixBackground = true;
 ?>
 
 <div
