INTERNAL-337: Hide sidebar and sidebar when no search results

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/search/banner.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/search/banner.phtml
@@ -32,6 +32,7 @@ $title = $block->getLayout()->getBlock('page.main.title')->getPageHeading();
     <div class="ml-8 md:pl-2">
       <button
         type="button"
+        id="sidebar-button"
         class="button button--filled-primary hidden w-[275px] min-w-[275px] md:inline-flex"
         @click="$store.productList.toggleFiltersSidebar()"
       >
