--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/layout/default.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/layout/default.xml
@@ -31,7 +31,7 @@
 
         <referenceContainer name="columns" htmlClass="grid-columns"/>
         <referenceContainer name="main" htmlClass="h-full row-span-2 col-span-3 only:col-span-full"/>
-        <referenceContainer name="div.sidebar.main" htmlClass="relative col-span-1"/>
+        <referenceContainer name="div.sidebar.main" htmlClass="sidebar-main relative col-span-1"/>
 
         <referenceContainer name="header.container" htmlClass="page-header contents"/>
         <referenceContainer name="page.wrapper" htmlClass="flex min-h-screen max-w-screen flex-col bg-bg-500">
